# upwork-agent-benchmark

./: .gitignore  README.md  pyproject.toml  ruff-precommit.toml  ruff.toml
agent_arena/agents/: base.py  qualification.py  worker.py
agent_benchmark/agents/: base.py  qualification.py  worker.py
agent_benchmark/tools/: output_tools.py
scripts/: venv.sh
src/: create_dataset.py  create_submissions.py  get_dataset.py  qualify_projects.py  transfer_qualified_projects.py
upwork_agent_benchmark/agents/: base.py  qualification.py  worker.py
upwork_agent_benchmark/tools/: input_tools.py
